<resources>
    <string name="app_name">Movie App</string>
    <string name="search">Search</string>
    <string name="rating">Rating</string>
    <string name="rating_value">0.0</string>
    <string name="language_value">XX</string>
    <string name="language">Language</string>
    <string name="overview">Overview</string>
    <string name="no_result_found">No Result Found</string>

    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="search_movie">Search Movie</string>
    <string name="fill_query">Fill Query!</string>
    <string name="setting">Setting</string>
    <string name="search_movie_title">Search Movie Title . . .</string>
    <string name="favorite_movies">Favorite</string>
    <string name="currently_no_data">Currently No Data</string>
    <string name="added">Added to Favorite</string>
    <string name="deleted">Deleted from Favorite</string>
    <string name="empty_text">NO DATA</string>
    <string name="daily_title">Come see around!</string>
    <string name="daily_desc">Movie App miss you!</string>
    <string name="set_daily_reminder">Set daily reminder</string>
    <string name="snackbar_daily_on">Daily reminder turned on</string>
    <string name="snackbar_daily_off">Daily reminder turned off</string>
    <string name="release_title">Released today</string>
    <string name="snackbar_release_on">Daily release notif turned on</string>
    <string name="snackbar_release_off">Daily release notif turned off</string>
    <string name="set_release_reminder">Set movie release notifications</string>

</resources>
